Refactor: code review cleanup (dead code, N+1, validation, consistency)
- Remove dead repository methods and unused fields
  - UserRepository, InquiryRepository, RequestRepository, PostReportRepository:
    drop unused derived finders (findByDeletedAtIsNullOrderByIdDesc 등)
  - UserTeamRepository: drop unused existsByUserIdAndTeamId
  - AdminServiceImpl: remove unused boardRepository field
  - Constants: remove unused MAX_FILE_SIZE, REDIS_USER_KEY, REDIS_POST_KEY
- Resolve N+1 in admin/board listings via JOIN FETCH
  - PostRepository.searchByBoard: fetch p.user
  - PostReportRepository.findReportsFiltered: fetch r.post, r.user
  - InquiryRepository.findInquiriesFiltered: fetch i.user
  - RequestRepository.findRequestsFiltered: fetch r.user
- Improve exception/log consistency
  - GlobalExceptionHandler: log 4xx as warn, 5xx as error
  - IdempotencyAspect: replace IllegalStateException with CustomException
- Strengthen DTO validation parity with create variants
  - PostUpdateRequest: @Size(max=10000) on content, @Size(max=5) on fileIds
  - CommentUpdateRequest: @Size(max=1000) on content
  - UserController.withdraw: add missing @Valid on request body
- Style/consistency
  - KeycloakRoleConverter: Collectors.toList() -> .toList()
  - SecurityConfig: csrf lambda -> AbstractHttpConfigurer::disable
  - CursorPageRequest: hard-coded size/sort -> Constants references

Build: mvn test all green (240 tests).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>